lox-tests/tests/operator/add_bool_nil.stderr
ERROR: Unsupported operation '+' between types 'boolean' and 'nil'
 --> 1:1
  |
1 | true + nil; // expect runtime error: Operands must be two numbers or two strings.
  | ^--------^
